terraform/load-balancing.tf
# # Application Load Balancer
# resource "aws_lb" "web_alb" {
#   name               = "primary-alb"
#   internal           = false
#   load_balancer_type = "application"
#   security_groups    = [aws_security_group.alb.id]
#   subnets            = [aws_subnet.public_1.id, aws_subnet.public_2.id]
# }

# # Create self-signed certificate
# resource "tls_private_key" "alb" {
#   algorithm = "RSA"
# }

# resource "tls_self_signed_cert" "alb" {
#   private_key_pem = tls_private_key.alb.private_key_pem

#   subject {
#     common_name  = aws_lb.web_alb.dns_name
#     organization = "at-bay"
#   }

#   validity_period_hours = 8760 # 1 year

#   allowed_uses = [
#     "key_encipherment",
#     "digital_signature",
#     "server_auth",
#   ]
# }

# resource "aws_acm_certificate" "alb" {
#   private_key      = tls_private_key.alb.private_key_pem
#   certificate_body = tls_self_signed_cert.alb.cert_pem
# }

# # Add HTTPS listener to ALB
# resource "aws_lb_listener" "https" {
#   load_balancer_arn = aws_lb.web_alb.arn
#   port              = "443"
#   protocol          = "HTTPS"
#   ssl_policy        = "ELBSecurityPolicy-2016-08"
#   certificate_arn   = aws_acm_certificate.alb.arn

#   default_action {
#     type             = "forward"
#     target_group_arn = aws_lb_target_group.web_tg.arn
#   }
# }

# resource "aws_lb_target_group" "web_tg" {
#   name     = "web-target-group"
#   port     = 80
#   protocol = "HTTP"
#   vpc_id   = aws_vpc.primary.id

#   health_check {
#     enabled             = true
#     healthy_threshold   = 2
#     interval            = 30
#     matcher             = "200"
#     path                = "/"
#     port                = "traffic-port"
#     protocol            = "HTTP"
#     timeout             = 5
#     unhealthy_threshold = 2
#   }

#   tags = {
#     Name = "web-target-group"
#   }
# }
